WiP fixing documentation

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -7,7 +7,7 @@ DOXYFILE_ENCODING = UTF-8
 PROJECT_NAME = "CNL"
 PROJECT_BRIEF = "Compositional Numeric Library"
 PROJECT_LOGO =
-PROJECT_NUMBER = rev.0.1.0
+PROJECT_NUMBER =
 
 STRIP_FROM_PATH = ../include
 BUILTIN_STL_SUPPORT = YES
@@ -113,7 +113,7 @@ EXTRACT_LOCAL_CLASSES = YES
 EXTRACT_LOCAL_METHODS = NO
 EXTRACT_ANON_NSPACES = NO
 HIDE_UNDOC_MEMBERS = YES
-HIDE_UNDOC_CLASSES = YES
+HIDE_UNDOC_CLASSES = NO
 HIDE_FRIEND_COMPOUNDS = NO
 HIDE_IN_BODY_DOCS = NO
 INTERNAL_DOCS = NO
